feat: spring-demo-07

--- a/spring-demo-07/.gitignore
+++ b/spring-demo-07/.gitignore
@@ -21,10 +21,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/small-spring-step-03.iml
-/.idea/
-
-/.idea/compiler.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/workspace.xml
+/*.iml
+/target
