--- a/spring-demo-08/.gitignore
+++ b/spring-demo-08/.gitignore
@@ -22,9 +22,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /*.iml
-/.idea/
-
-/.idea/compiler.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/workspace.xml
+/target
